--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,17 @@
     <%= csp_meta_tag %>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://example.com/fontawesome/v6.2.0/js/all.js" data-search-pseudo-elements ></script>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    <nav class="navbar navbar-dark bg-dark p-2 d-flex justify-content-between">
+      <%= link_to "Home", restaurants_path, class: "btn btn-outline-info" %>
+      <%= link_to "Add a restaurant", new_restaurant_path, class: "btn btn-info" %>
+    </nav>
     <div class="container p-3">
       <%= yield %>
     </div>
